# wolf3d

./: .gitmodules  CMakeLists.txt  Makefile  README.md  author  map.map
incs/: libft.h  reader.h  wolf3d.h
libs/SDL2/SDL2-2.0.12/: Makefile  Makefile.rules  config.status  libtool  sdl2-config.cmake
libs/SDL2/lib/: libSDL2-2.0.0.dylib  libSDL2.la  libSDL2_test.la  libSDL2main.la
libs/SDL2/lib/pkgconfig/: sdl2.pc
libs/libft/: CMakeLists.txt  ft_arriter.c  ft_arrmap.c  ft_atoi.c  ft_bzero.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putstr.c  ft_putstr_fd.c  libft.h
srcs/: editor.c  event.c  fonts.c  fonts_cont.c  game.c  game_menu.c  level.c  loops.c  main.c  map.c  player.c  process_game.c  ray.c  render.c  texture.c  utils.c  utils2.c  window.c
